feat: update voucher analytics to support specific vendor analytics
